<resources>
    <string name="app_name">TaxiApp</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sing_up">Sing Up</string>
    <string name="log_in">Log In</string>

    <string name="tap_to_log_in">Tap To Log In</string>
    <string name="tap_to_sing_up">Tap To Sing Up</string>
    <string name="driver_sing_in">Driver Sing In</string>
    <string name="passenger_sing_in">Passenger Sing In</string>
    <string name="title_activity_driver_maps">DriverMapsActivity</string>
    <string name="settings">Settings</string>
    <string name="sing_out">Sing Out</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_activity_passenger_maps">PassengerMapsActivity</string>
    <string name="book_taxi">Book taxi</string>
    <string name="getting_your_taxi">Getting your taxi...</string>
    <string name="getting_your_driver_location">"Getting your driver location... "</string>
</resources>